// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo > renders the logo for authView location 1`] = `
"<div class="logoContainer large" data-test-id="n8n-logo"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="30" viewBox="0 0 32 30" class="logo">
    <defs>
      <linearGradient id="forgeGlow" x1="0%" x2="0%" y1="0%" y2="100%">
        <stop offset="0%" style="stop-color:#f8bc54;"></stop>
        <stop offset="100%" style="stop-color:#dc8f09;"></stop>
      </linearGradient>
    </defs>
    <path fill="url(#forgeGlow)" d="M6 12h20c1.1 0 2 .9 2 2v2c0 .55-.45 1-1 1h-2v6c0 1.1-.9 2-2 2H9c-1.1 0-2-.9-2-2v-6H5c-.55 0-1-.45-1-1v-2c0-1.1.9-2 2-2"></path>
    <path fill="url(#forgeGlow)" d="M2 14c0-.55.45-1 1-1h3v4H3c-.55 0-1-.45-1-1z"></path>
    <path fill="hsl(38, 92%, 72%)" d="M8 10h16c.55 0 1 .45 1 1v1H7v-1c0-.55.45-1 1-1"></path>
    <circle cx="16" cy="6" r="2" fill="hsl(46, 100%, 70%)"></circle>
    <circle cx="20" cy="4" r="1" fill="hsl(46, 100%, 80%)"></circle>
    <circle cx="12" cy="5" r="1.2" fill="hsl(46, 100%, 75%)"></circle>
  </svg><svg xmlns="http://www.w3.org/2000/svg" width="50" height="30" viewBox="0 0 50 30" class="logoText">
    <g fill="#1a1f2e">
      <path d="M0 8h6v2H2v4h3.5v2H2v6H0zM8 8h5c1.1 0 2 .9 2 2v10c0 1.1-.9 2-2 2H8c-1.1 0-2-.9-2-2V10c0-1.1.9-2 2-2m.5 2v10h4V10zM17 8h5c1.65 0 3 1.35 3 3v2c0 1.1-.6 2-1.5 2.5L25 22h-2.5l-1.3-6H19v6h-2zm2 2v4h3c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1zM27 8h6v2h-4.5c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1H33v-4h-2v-2h4v6c0 1.1-.9 2-2 2h-6c-1.1 0-2-.9-2-2V10c0-1.1.9-2 2-2M36 8h6v2h-4v4h3.5v2H38v4h4v2h-6z"></path>
    </g>
  </svg></div>"
`;

exports[`Logo > renders the logo for sidebar location when sidebar is collapsed 1`] = `
"<div class="logoContainer sidebar sidebarCollapsed" data-test-id="n8n-logo"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="30" viewBox="0 0 32 30" class="logo">
    <defs>
      <linearGradient id="forgeGlow" x1="0%" x2="0%" y1="0%" y2="100%">
        <stop offset="0%" style="stop-color:#f8bc54;"></stop>
        <stop offset="100%" style="stop-color:#dc8f09;"></stop>
      </linearGradient>
    </defs>
    <path fill="url(#forgeGlow)" d="M6 12h20c1.1 0 2 .9 2 2v2c0 .55-.45 1-1 1h-2v6c0 1.1-.9 2-2 2H9c-1.1 0-2-.9-2-2v-6H5c-.55 0-1-.45-1-1v-2c0-1.1.9-2 2-2"></path>
    <path fill="url(#forgeGlow)" d="M2 14c0-.55.45-1 1-1h3v4H3c-.55 0-1-.45-1-1z"></path>
    <path fill="hsl(38, 92%, 72%)" d="M8 10h16c.55 0 1 .45 1 1v1H7v-1c0-.55.45-1 1-1"></path>
    <circle cx="16" cy="6" r="2" fill="hsl(46, 100%, 70%)"></circle>
    <circle cx="20" cy="4" r="1" fill="hsl(46, 100%, 80%)"></circle>
    <circle cx="12" cy="5" r="1.2" fill="hsl(46, 100%, 75%)"></circle>
  </svg>
  <!--v-if-->
</div>"
`;

exports[`Logo > renders the logo for sidebar location when sidebar is expanded 1`] = `
"<div class="logoContainer sidebar sidebarExpanded" data-test-id="n8n-logo"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="30" viewBox="0 0 32 30" class="logo">
    <defs>
      <linearGradient id="forgeGlow" x1="0%" x2="0%" y1="0%" y2="100%">
        <stop offset="0%" style="stop-color:#f8bc54;"></stop>
        <stop offset="100%" style="stop-color:#dc8f09;"></stop>
      </linearGradient>
    </defs>
    <path fill="url(#forgeGlow)" d="M6 12h20c1.1 0 2 .9 2 2v2c0 .55-.45 1-1 1h-2v6c0 1.1-.9 2-2 2H9c-1.1 0-2-.9-2-2v-6H5c-.55 0-1-.45-1-1v-2c0-1.1.9-2 2-2"></path>
    <path fill="url(#forgeGlow)" d="M2 14c0-.55.45-1 1-1h3v4H3c-.55 0-1-.45-1-1z"></path>
    <path fill="hsl(38, 92%, 72%)" d="M8 10h16c.55 0 1 .45 1 1v1H7v-1c0-.55.45-1 1-1"></path>
    <circle cx="16" cy="6" r="2" fill="hsl(46, 100%, 70%)"></circle>
    <circle cx="20" cy="4" r="1" fill="hsl(46, 100%, 80%)"></circle>
    <circle cx="12" cy="5" r="1.2" fill="hsl(46, 100%, 75%)"></circle>
  </svg><svg xmlns="http://www.w3.org/2000/svg" width="50" height="30" viewBox="0 0 50 30" class="logoText">
    <g fill="#1a1f2e">
      <path d="M0 8h6v2H2v4h3.5v2H2v6H0zM8 8h5c1.1 0 2 .9 2 2v10c0 1.1-.9 2-2 2H8c-1.1 0-2-.9-2-2V10c0-1.1.9-2 2-2m.5 2v10h4V10zM17 8h5c1.65 0 3 1.35 3 3v2c0 1.1-.6 2-1.5 2.5L25 22h-2.5l-1.3-6H19v6h-2zm2 2v4h3c.55 0 1-.45 1-1v-2c0-.55-.45-1-1-1zM27 8h6v2h-4.5c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1H33v-4h-2v-2h4v6c0 1.1-.9 2-2 2h-6c-1.1 0-2-.9-2-2V10c0-1.1.9-2 2-2M36 8h6v2h-4v4h3.5v2H38v4h4v2h-6z"></path>
    </g>
  </svg></div>"
`;
